--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "lodash": "^4.17.20",
     "lottie-react-native": "~2.6.1",
